Issue ekstep/Collection-Editor#1 fix: header alignment issue

--- a/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
+++ b/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
@@ -33,6 +33,7 @@ body {
     height: 90%!important;
     margin-bottom: 0!important;
     margin-top: 0em!important;
+    padding-top: 5px !important;
 }
 
 .ui-fancytree:focus {
