--- a/org.ekstep.collectioneditor-1.0/editor/header.css
+++ b/org.ekstep.collectioneditor-1.0/editor/header.css
@@ -62,7 +62,7 @@ body {
 }
 
 .custom-container .one.wide.column {
-    width: 70px !important;
+    width: 60px !important;
 }
 
 .custom-container .five.wide.column {
